force-app/main/default/objects/ssot__BusinessRegulatoryAuthType__dlm/fields/ssot__BusinessTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__BusinessTypeId__c</fullName>
    <label>Business Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>BusinessTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <required>true</required>
    <type>Text</type>
</CustomField>