force-app/main/default/objects/ssot__BusinessRegulatoryAuthType__dlm/fields/ssot__RegulatoryAuthorizationTypeId__c.field-meta.xml
<CustomField>
    <fullName>ssot__RegulatoryAuthorizationTypeId__c</fullName>
    <label>Regulatory Authorization Type</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>RegulatoryAuthorizationTypeId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>