force-app/main/default/objects/ssot__BusinessRegulatoryAuthType__dlm/fields/ssot__rel_1739512781836_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1739512781836_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>BusinessRegulatoryAuthType_Regulator_rel</label>
    <referenceTo>ssot__RegulatoryAuthorizationType__dlm</referenceTo>
    <relationshipLabel>BusinessRegulatoryAuthType_Regulator_rel</relationshipLabel>
    <relationshipName>rel_1739512781836_end</relationshipName>
    <type>Lookup</type>
</CustomField>